# identity-verify-WAS

./: LICENSE  README.md  docker-compose.dev.yml  docker-compose.pull.yml  docker-compose.push.yml  docker-compose.yml  package-lock.json  package.json  pull-from-hub.sh  push-to-hub.sh
.github/ISSUE_TEMPLATE/: default-issue-template.md
.github/PULL_REQUEST_TEMPLATE/: default-pull-request-template.md
.github/workflows/: auto-test.yaml  deploy.yaml  test.yaml
BE/holder/: .gitignore  Dockerfile  package-lock.json  package.json
BE/holder/src/: app.module.ts  (+3 more)
BE/issuer/: Dockerfile  package-lock.json  package.json
BE/service/: .gitignore  Dockerfile  package-lock.json  package.json
BE/verifier/: Dockerfile  package-lock.json  package.json
FE/vite-project/: package-lock.json
SC/: Cargo.toml  build.sh  deploy.sh  readme.md  rustfmt.toml
SC/js_test/: method.ts  package-lock.json  package.json  test_load_hashed_vc.js
SC/scripts/: deploy.sh
SC/src/: did_document.rs  lib.rs  test.rs  utils.rs  vc.rs
ZKP/: README.md
ZKP/ed25519_test/: Cargo.toml
ZKP/halo2_chip/: Cargo.toml
ZKP/halo2_example/: Cargo.toml
ZKP/test_wasm/: Cargo.toml  index.html
ZKP/zk_snark_example/: Cargo.toml
ZKP/zkp_circuit/: Cargo.toml  index.js
ZKP/zkp_circuit/_src_to_be_used/chips/: chip_add.rs  chip_field.rs  mod.rs
ZKP/zkp_circuit/_src_to_be_used/circuit/: circuit.rs
ZKP/zkp_circuit/_src_to_be_used/instructions/: inst_mul.rs  mod.rs
ZKP/zkp_circuit/src/: lib.rs  main.rs  wasm.rs
ZKP/zkp_circuit/src_to_be_used/: main.rs
ZKP/zkp_circuit/src_to_be_used/chips/: chip_mul.rs
ZKP/zkp_circuit/src_to_be_used/instructions/: inst_add.rs  inst_field.rs
(+58 files in other folders)
