[package]
name = "zkp_circuit"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2_proofs = "0.3.0"
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
getrandom = { version = "0.2", features = ["js"]}
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
